Update profile image positioning

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
     <div class="about-layout">
         <!-- We will generate an image here -->
         <img class="about-image fade-up" src="assets/profile.jpg" alt="Amy Jerkovich"
-            style="display: block; object-fit: cover;">
+            style="display: block; object-fit: cover; object-position: 20% 20%;">
         <div class="about-content fade-up delay-1">
             <h1>Hi, I'm <span class="gradient-text">Amy</span>.</h1>
             <p>I am a software engineer deeply fascinated by artificial intelligence, specifically the emerging field of
