Update About page content

--- a/about.html
+++ b/about.html
@@ -86,13 +86,16 @@
         <div class="about-content fade-up delay-1">
             <h1>Hi, I'm <span class="gradient-text">Amy</span>.</h1>
             <p>I am a software engineer deeply fascinated by artificial intelligence, specifically the emerging field of
-                autonomous agents.</p>
-            <p>My work involves taking raw LLM capabilities and wrapping them in robust architectures with tools,
-                memory, and reasoning loops to solve complex real-world problems. Whether it's a subagent navigating the
-                DOM, or a multi-agent system debating code structure, I am obsessed with pushing the boundaries of what
-                AI can automate.</p>
-            <p>When I'm not tweaking system prompts or fine-tuning models, you can find me writing about my discoveries
-                right here on this blog.</p>
+                autonomous agents. My focus is on the tooling and infrastructure required to bring AI out of the chat
+                window and into the real world to execute tangible tasks.</p>
+            <p>My work involves taking raw LLM capabilities and wrapping them in robust architectures—integrating custom
+                tools, persistent memory systems, and complex reasoning loops to solve real-world problems. Whether I'm
+                building a subagent to navigate the DOM, engineering a multi-agent system to debate code structure, or
+                designing entirely new frameworks for automation, I am obsessed with pushing the boundaries of what
+                these systems can achieve independently.</p>
+            <p>This blog is my open notebook. When I'm not tweaking system prompts, fine-tuning models, or experimenting
+                with new agent architectures, you can find me writing about my discoveries and the realities of building
+                AI tooling right here.</p>
 
             <h2 style="margin-top: 2rem; margin-bottom: 1rem; color: var(--text-primary);">Core Stack</h2>
             <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
