--- a/about.html
+++ b/about.html
@@ -85,14 +85,13 @@
             style="display: block; object-fit: cover; object-position: 20% 20%;">
         <div class="about-content fade-up delay-1">
             <h1>Hi, I'm <span class="gradient-text">Amy</span>.</h1>
-            <p>I am a software engineer deeply fascinated by artificial intelligence, specifically the emerging field of
+            <p>I am a software engineer deeply fascinated by artificial intelligence, specifically the field of
                 autonomous agents. My focus is on the tooling and infrastructure required to bring AI out of the chat
                 window and into the real world to execute tangible tasks.</p>
             <p>My work involves taking raw LLM capabilities and wrapping them in robust architectures—integrating custom
                 tools, persistent memory systems, and complex reasoning loops to solve real-world problems. Whether I'm
-                building a subagent to navigate the DOM, engineering a multi-agent system to debate code structure, or
-                designing entirely new frameworks for automation, I am obsessed with pushing the boundaries of what
-                these systems can achieve independently.</p>
+                building a subagent to navigate the DOM or engineering a multi-agent system, I am obsessed with pushing
+                the boundaries of what these systems can achieve independently.</p>
             <p>This blog is my open notebook. When I'm not tweaking system prompts, fine-tuning models, or experimenting
                 with new agent architectures, you can find me writing about my discoveries and the realities of building
                 AI tooling right here.</p>
