Update logo from Amy.ai to Amy Jerkovich

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amy Jerkovich | AI Agent Developer</title>
-    <meta name="description" content="Personal blog of Amy Jerkovich, a software engineer building AI agents and intelligent systems.">
+    <meta name="description"
+        content="Personal blog of Amy Jerkovich, a software engineer building AI agents and intelligent systems.">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <nav>
-        <div class="logo">Amy<span class="gradient-text">.ai</span></div>
+        <div class="logo">Amy<span class="gradient-text"> Jerkovich</span></div>
         <div class="nav-links">
             <a href="index.html" class="active">Home</a>
             <a href="index.html#projects">Projects</a>
@@ -19,7 +22,8 @@
 
     <header class="hero">
         <h1 class="fade-up">Building the next generation of <span class="gradient-text">AI Agents</span></h1>
-        <p class="fade-up delay-1">I'm Amy Jerkovich. I write code that thinks, learns, and builds. Welcome to my digital garden of autonomous systems and LLM experiments.</p>
+        <p class="fade-up delay-1">I'm Amy Jerkovich. I write code that thinks, learns, and builds. Welcome to my
+            digital garden of autonomous systems and LLM experiments.</p>
         <div class="fade-up delay-2">
             <a href="#projects" class="btn">Explore My Work</a>
         </div>
@@ -32,7 +36,8 @@
             <a href="post-template.html" class="card fade-up">
                 <div class="card-tag">Project Dive</div>
                 <h3 class="card-title">Building an Autonomous Browser Subagent</h3>
-                <p class="card-desc">How I architected an AI agent capable of navigating the web, interacting with DOM elements, and robustly capturing visual state for QA testing.</p>
+                <p class="card-desc">How I architected an AI agent capable of navigating the web, interacting with DOM
+                    elements, and robustly capturing visual state for QA testing.</p>
                 <div class="card-meta">
                     <span>Feb 18, 2026</span>
                     <span>12 min read</span>
@@ -43,7 +48,8 @@
             <a href="post-template.html" class="card fade-up delay-1">
                 <div class="card-tag">Architecture</div>
                 <h3 class="card-title">The "Thought" Loop Pattern in Agentic Systems</h3>
-                <p class="card-desc">Exploring the ReAct (Reasoning and Acting) framework and how explicitly forcing agents to plan steps reduces hallucinations in complex workflows.</p>
+                <p class="card-desc">Exploring the ReAct (Reasoning and Acting) framework and how explicitly forcing
+                    agents to plan steps reduces hallucinations in complex workflows.</p>
                 <div class="card-meta">
                     <span>Jan 24, 2026</span>
                     <span>8 min read</span>
@@ -54,7 +60,8 @@
             <a href="post-template.html" class="card fade-up delay-2">
                 <div class="card-tag">Experiment</div>
                 <h3 class="card-title">Orchestrating Multi-Agent Debates</h3>
-                <p class="card-desc">What happens when you pit two specialized agents against each other to solve a coding problem? An analysis of consensus-driven generation.</p>
+                <p class="card-desc">What happens when you pit two specialized agents against each other to solve a
+                    coding problem? An analysis of consensus-driven generation.</p>
                 <div class="card-meta">
                     <span>Dec 10, 2025</span>
                     <span>15 min read</span>
@@ -69,4 +76,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
