--- a/post-template.html
+++ b/post-template.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Building an Autonomous Browser Subagent | Amy.ai</title>
+    <title>Building an Autonomous Browser Subagent | Amy Jerkovich</title>
     <meta name="description" content="How I architected an AI agent capable of navigating the web.">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <nav>
-        <div class="logo">Amy<span class="gradient-text">.ai</span></div>
+        <div class="logo">Amy<span class="gradient-text"> Jerkovich</span></div>
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="index.html#projects" class="active">Projects</a>
