Update logo to be all one color

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav>
-        <div class="logo">Amy <span class="gradient-text">Jerkovich</span></div>
+        <div class="logo">Amy Jerkovich</div>
         <div class="nav-links">
             <a href="index.html" class="active">Home</a>
             <a href="index.html#projects">Projects</a>
