Simplify hero text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
 
     <header class="hero">
-        <h1 class="fade-up">Moving AI out of the chat window and into the real world, one architecture at a time</h1>
+        <h1 class="fade-up">Building AI agents for the real world</h1>
         <p class="fade-up delay-1">I'm Amy Jerkovich. I write code that thinks, learns, and builds. Welcome to my
             digital garden of autonomous systems and LLM experiments.</p>
         <div class="fade-up delay-2">
