Add indigo color accents to styling

--- a/about.html
+++ b/about.html
@@ -99,13 +99,13 @@
             <h2 style="margin-top: 2rem; margin-bottom: 1rem; color: var(--text-primary);">Core Stack</h2>
             <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
                 <span
-                    style="background: #f3f4f6; padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid var(--surface-border);">Python</span>
+                    style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">Python</span>
                 <span
-                    style="background: #f3f4f6; padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid var(--surface-border);">Flask</span>
+                    style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">Flask</span>
                 <span
-                    style="background: #f3f4f6; padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid var(--surface-border);">LangChain</span>
+                    style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">LangChain</span>
                 <span
-                    style="background: #f3f4f6; padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid var(--surface-border);">LLM
+                    style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">LLM
                     Ops</span>
             </div>
         </div>
