Update tech stack with ChromaDB, Gemini, RAG, and LocalLLM

--- a/about.html
+++ b/about.html
@@ -107,6 +107,14 @@
                 <span
                     style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">LLM
                     Ops</span>
+                <span
+                    style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">ChromaDB</span>
+                <span
+                    style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">Gemini</span>
+                <span
+                    style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">RAG</span>
+                <span
+                    style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">LocalLLM</span>
             </div>
         </div>
     </div>
