Update first project card content

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
             <!-- Article Card 1 -->
             <a href="post-template.html" class="card fade-up">
                 <div class="card-tag">Project Dive</div>
-                <h3 class="card-title">Building an Autonomous Browser Subagent</h3>
-                <p class="card-desc">How I architected an AI agent capable of navigating the web, interacting with DOM
-                    elements, and robustly capturing visual state for QA testing.</p>
+                <h3 class="card-title">Building a Persistent AI Companion with Memory and State</h3>
+                <p class="card-desc">How we architected an AI agent that runs continuously on a Raspberry Pi, talks over
+                    Telegram, grounds replies in semantic memory (ChromaDB + RAG), and maintains internal
+                    state—hormones, self-model, dreams, and tinkering—so it behaves like a single ongoing presence
+                    rather than stateless chat.</p>
                 <div class="card-meta">
                     <span>Feb 18, 2026</span>
                     <span>12 min read</span>
