Add next post teaser to template

--- a/post-template.html
+++ b/post-template.html
@@ -75,6 +75,9 @@
                 lived experience with explicit state (hormones, self-model, transcript) and a single long-running
                 process, we get replies that are grounded in what actually happened—not just the last message in the
                 chat.</p>
+
+            <p>In the next post, I'll dive into how I manage the semantic memory layer and the mechanics of mood-biased
+                recall.</p>
         </div>
     </article>
 
