--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             </a>
 
             <!-- Article Card 2 -->
-            <a href="post-template.html" class="card fade-up delay-1">
+            <a href="post-2.html" class="card fade-up delay-1">
                 <div class="card-tag">Architecture</div>
-                <h3 class="card-title">The "Thought" Loop Pattern in Agentic Systems</h3>
-                <p class="card-desc">Exploring the ReAct (Reasoning and Acting) framework and how explicitly forcing
-                    agents to plan steps reduces hallucinations in complex workflows.</p>
+                <h3 class="card-title">Semantic Memory and Mood-Biased Recall</h3>
+                <p class="card-desc">How Milo stores experiences in ChromaDB and uses its current emotional state to
+                    shape which memories are retrieved for a response.</p>
                 <div class="card-meta">
                     <span>Jan 24, 2026</span>
                     <span>8 min read</span>
