--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <!-- Article Card 2 -->
             <a href="post-2.html" class="card fade-up delay-1">
-                <div class="card-tag">Architecture</div>
+                <div class="card-tag">Memory</div>
                 <h3 class="card-title">Semantic Memory and Mood-Biased Recall</h3>
                 <p class="card-desc">How Milo stores experiences in ChromaDB and uses its current emotional state to
                     shape which memories are retrieved for a response.</p>
