Update companion to thought partner in post template

--- a/post-template.html
+++ b/post-template.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Building a Persistent AI Thought Partner with Memory and State | Amy Jerkovich</title>
+    <title>Building a Persistent AI Thought Partner (Milo) with Memory and State | Amy Jerkovich</title>
     <meta name="description" content="How I architected an AI agent capable of navigating the web.">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -35,7 +35,8 @@
         </header>
 
         <div class="post-content fade-up delay-1">
-            <p>One of the biggest challenges in AI companions today is continuity. Most chatbots are stateless: each
+            <p>One of the biggest challenges in AI thought partners today is continuity. Most chatbots are stateless:
+                each
                 turn starts from scratch. I wanted an agent that could run 24/7, remember in a meaningful way, and keep
                 an internal sense of self—so I built Milo: it lives on a Raspberry Pi, talks over Telegram, and grounds
                 every reply in semantic memory and ongoing state.</p>
@@ -70,7 +71,8 @@
                 plus the most pertinent thread.</p>
 
             <h3>Key Takeaways</h3>
-            <p>Building this taught me that the future of companions is continuous and stateful. We can’t rely on
+            <p>Building this taught me that the future of AI thought partners is continuous and stateful. We can’t rely
+                on
                 stateless turns when the goal is something that feels like one ongoing presence. By combining RAG over
                 lived experience with explicit state (hormones, self-model, transcript) and a single long-running
                 process, we get replies that are grounded in what actually happened—not just the last message in the
