Sync Milo name to post h1 and index project card

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- Article Card 1 -->
             <a href="post-template.html" class="card fade-up">
                 <div class="card-tag">Project Dive</div>
-                <h3 class="card-title">Building a Persistent AI Thought Partner with Memory and State</h3>
+                <h3 class="card-title">Building a Persistent AI Thought Partner (Milo) with Memory and State</h3>
                 <p class="card-desc">How I architected an AI agent that runs continuously on a Raspberry Pi, talks over
                     Telegram, grounds replies in semantic memory (ChromaDB + RAG), and maintains internal
                     state—hormones, self-model, dreams, and tinkering—so it behaves like a single ongoing presence
