Publish third post on the Sentinel Loop

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
             </a>
 
             <!-- Article Card 3 -->
-            <a href="post-template.html" class="card fade-up delay-2">
-                <div class="card-tag">Experiment</div>
-                <h3 class="card-title">Orchestrating Multi-Agent Debates</h3>
-                <p class="card-desc">What happens when you pit two specialized agents against each other to solve a
-                    coding problem? An analysis of consensus-driven generation.</p>
+            <a href="post-3.html" class="card fade-up delay-2">
+                <div class="card-tag">Architecture</div>
+                <h3 class="card-title">The Sentinel Loop: Chat and Background Tasks in One Process</h3>
+                <p class="card-desc">How a single Python loop polls Telegram and manages scheduling for tinkering,
+                    dreams, and continuous AI thought.</p>
                 <div class="card-meta">
                     <span>Dec 10, 2025</span>
                     <span>15 min read</span>
