--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <!-- Article Card 3 -->
             <a href="post-3.html" class="card fade-up delay-2">
-                <div class="card-tag">Architecture</div>
+                <div class="card-tag">Loops and Tasks</div>
                 <h3 class="card-title">The Sentinel Loop: Chat and Background Tasks in One Process</h3>
                 <p class="card-desc">How a single Python loop polls Telegram and manages scheduling for tinkering,
                     dreams, and continuous AI thought.</p>
