--- a/post-3.html
+++ b/post-3.html
@@ -48,11 +48,13 @@
                 <code>last_run</code> dict (e.g. <code>tinker_gift</code>, <code>dream</code>, <code>pulse</code>,
                 <code>idle_reflection</code>), and on each pass, for each task, if <code>now - last_run[task]</code>
                 exceeds that task’s interval (sometimes randomized), run the task and set
-                <code>last_run[task] = now</code>.</p>
+                <code>last_run[task] = now</code>.
+            </p>
             <p>That means tinkering might run every 6–12 hours, dreams around a set hour (e.g. 3 AM), morning pulse at 8
                 AM, “reach out because I miss you” when loneliness and time-since-last-message cross a threshold, and
                 “reach out anytime” on a separate random cadence. All of that lives in the same loop that calls
-                <code>getUpdates</code>. So one process is both the chat server and the background “persona” engine.</p>
+                <code>getUpdates</code>. So one process is both the chat server and the background “persona” engine.
+            </p>
 
             <h2>Telegram and the long reply</h2>
             <p>When a message arrives, we call <code>process_signal</code>: recall, build prompt, call the LLM, parse
@@ -74,7 +76,8 @@
                 last message are high, maybe run “reach out because I miss you”), <strong>reach_out_anytime</strong>
                 (random chance to run “reach out because I felt like it”), and <strong>project_progress</strong> (bump a
                 few “in progress” projects by a small percentage). Each has its own interval or condition, so the loop
-                stays a single place where “when did I last do X?” is answered and “should I do X now?” is decided.</p>
+                stays a single place where “when did I last do X?” is answered and “should I do X now?” is decided.
+            </p>
 
             <pre><code># Simplified: each iteration
 def watch_loop():
@@ -106,7 +109,15 @@ def watch_loop():
                 <code>last_run</code> dict, time- and condition-based gates, and one process. Replies run synchronously
                 so conversation order is preserved; a few reflective tasks run in daemon threads so they don’t block the
                 loop. Tinkering, dreams, and spontaneous reach-outs all run in that same loop, so one process is both
-                the interface and the ongoing “persona” layer.</p>
+                the interface and the ongoing “persona” layer.
+            </p>
+
+            <p>So far we’ve looked at how replies are grounded in memory and how one loop handles both chat and
+                scheduled tasks. But the thought partner doesn’t only <em>recall</em>—it also has a running sense of
+                “how I feel” and “who I am.” In the next post, I’ll walk through how we model that: a simple hormonal
+                state (oxytocin, cortisol, loneliness, etc.) that shifts with events and time, and a self-model (a
+                short, updatable summary of identity and values) that gets injected into key prompts. Together they’re
+                what make the system’s behavior cohere over time instead of feeling like a neutral chatbot.</p>
         </div>
     </article>
 
