Publish fourth post on state and self-model

--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
                     <span>15 min read</span>
                 </div>
             </a>
+
+            <!-- Article Card 4 -->
+            <a href="post-4.html" class="card fade-up delay-3">
+                <div class="card-tag">Identity</div>
+                <h3 class="card-title">State and “body”: hormones and self-model</h3>
+                <p class="card-desc">How internal hormonal state and a persistent self-model keep a thought partner
+                    behaving coherently over time.</p>
+                <div class="card-meta">
+                    <span>Nov 05, 2025</span>
+                    <span>10 min read</span>
+                </div>
+            </a>
         </div>
     </section>
 
