Update thought partners to agents in key takeaways

--- a/post-template.html
+++ b/post-template.html
@@ -71,7 +71,7 @@
                 plus the most pertinent thread.</p>
 
             <h3>Key Takeaways</h3>
-            <p>Building this taught me that the future of AI thought partners is continuous and stateful. We can’t rely
+            <p>Building this taught me that the future of AI agents is continuous and stateful. We can’t rely
                 on
                 stateless turns when the goal is something that feels like one ongoing presence. By combining RAG over
                 lived experience with explicit state (hormones, self-model, transcript) and a single long-running
