--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
                     <span>10 min read</span>
                 </div>
             </a>
+
+            <!-- Article Card 5 -->
+            <a href="post-5.html" class="card fade-up delay-4">
+                <div class="card-tag">Evolution</div>
+                <h3 class="card-title">Evolution and consent: when the thought partner proposes a change</h3>
+                <p class="card-desc">How we handle updates when the system proposes a change to its own self-model or
+                    core behavior.</p>
+                <div class="card-meta">
+                    <span>Oct 28, 2025</span>
+                    <span>8 min read</span>
+                </div>
+            </a>
         </div>
     </section>
 
