Update fifth post title to agent

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <!-- Article Card 5 -->
             <a href="post-5.html" class="card fade-up delay-4">
                 <div class="card-tag">Evolution</div>
-                <h3 class="card-title">Evolution and consent: when the thought partner proposes a change</h3>
+                <h3 class="card-title">Evolution and consent: when the agent proposes a change</h3>
                 <p class="card-desc">How we handle updates when the system proposes a change to its own self-model or
                     core behavior.</p>
                 <div class="card-meta">
