Add seventh post on Telegram interface

--- a/index.html
+++ b/index.html
@@ -93,6 +93,29 @@
                     <span>8 min read</span>
                 </div>
             </a>
+
+            <!-- Article Card 6 -->
+            <a href="post-6.html" class="card fade-up delay-5">
+                <div class="card-tag">Engineering</div>
+                <h3 class="card-title">The reply pipeline: prompt building and guardrails</h3>
+                <p class="card-desc">How a single reply is built: assembling the prompt, parsing the model’s output, and
+                    running guardrails.</p>
+                <div class="card-meta">
+                    <span>Oct 14, 2025</span>
+                    <span>11 min read</span>
+                </div>
+            </a>
+
+            <!-- Article Card 7 -->
+            <a href="post-7.html" class="card fade-up delay-6">
+                <div class="card-tag">Engineering</div>
+                <h3 class="card-title">Telegram as the interface</h3>
+                <p class="card-desc">Why we chose Telegram, how the connection works, and what makes it reliable.</p>
+                <div class="card-meta">
+                    <span>Oct 02, 2025</span>
+                    <span>14 min read</span>
+                </div>
+            </a>
         </div>
     </section>
 
