Publish eighth post on Dreams and Tinkering

--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
                     <span>14 min read</span>
                 </div>
             </a>
+
+            <!-- Article Card 8 -->
+            <a href="post-8.html" class="card fade-up delay-7">
+                <div class="card-tag">Engineering</div>
+                <h3 class="card-title">Dreams and tinkering</h3>
+                <p class="card-desc">How the system runs scheduled background tasks in the quiet hours.</p>
+                <div class="card-meta">
+                    <span>Sep 25, 2025</span>
+                    <span>15 min read</span>
+                </div>
+            </a>
         </div>
     </section>
 
